added aos animation

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 section {
   padding-top: 100px;
-  padding-bottom: 100px; }
+  padding-bottom: 100px;
+  overflow: hidden; }
 
 .body {
   font-family: 'Ubuntu', sans-serif; }
@@ -32,7 +33,7 @@ section {
   font-style: normal;
   font-weight: bold;
   font-size: 45px;
-  line-height: 64px;
+  line-height: 54px;
   text-align: center;
   color: #FFFFFF;
   margin-bottom: 30px; }
@@ -42,6 +43,16 @@ section {
   line-height: 30px;
   text-align: center;
   color: #FFFFFF; }
+
+#toTop {
+  position: fixed;
+  right: 20px;
+  bottom: 30px;
+  padding: 12px 20px;
+  background-color: #B31217;
+  z-index: 500; }
+  #toTop i {
+    font-size: 36px; }
 
 @media (min-width: 576px) {
   .main_btn::after {
@@ -105,7 +116,7 @@ section {
       .section_intro .intro_content .intro_title {
         font-weight: bold;
         font-size: 45px;
-        line-height: 64px;
+        line-height: 54px;
         color: #E52D27; }
       .section_intro .intro_content .intro_subtitle {
         font-size: 20px;
@@ -125,7 +136,8 @@ section {
     .section_intro .banner_wrap {
       background-position: 62% 100%; }
     .section_intro .menu {
-      margin-top: 50px; }
+      margin-top: 50px;
+      padding-left: 25px; }
     .section_intro .logo_title {
       font-family: 'Playfair Display', serif;
       font-weight: bold;
@@ -183,7 +195,7 @@ section {
         z-index: 100; }
     .section_intro .toggle_button {
       position: absolute;
-      right: 20px;
+      right: 25px;
       height: 24px;
       width: 20px;
       display: flex;
@@ -196,17 +208,17 @@ section {
         position: absolute;
         width: 100%;
         background-color: #fff;
-        height: 2px;
+        height: 3px;
         transition-duration: .3s; }
       .section_intro .toggle_button span::before {
         content: '';
         width: 60%;
-        top: -7px;
+        top: -8px;
         right: 10%; }
       .section_intro .toggle_button span::after {
         content: '';
         width: 60%;
-        top: 7px;
+        top: 8px;
         left: 10%; }
     .section_intro .intro_content {
       position: relative;
@@ -395,7 +407,7 @@ section {
   .section_promo {
     padding: 0; }
     .section_promo .promo_text_wrap {
-      padding: 100px 15px; }
+      padding: 100px 20px; }
     .section_promo .promo_photo_wrap::before {
       width: 87px;
       height: 87px; }
@@ -622,14 +634,26 @@ section {
 
 .section_anketa {
   background: url(../assets/anketa.jpg) no-repeat 0 0;
-  background-size: cover; }
-  .section_anketa .section_title {
-    z-index: 5; }
+  background-size: cover;
+  padding: 200px 0;
+  position: relative; }
+  .section_anketa .background_darken {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0);
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transition: .3s; }
   .section_anketa .form_box {
-    background: #313131;
+    background-color: #232323;
+    background-image: url(../assets/form_background_after_send.jpg);
+    background-repeat: no-repeat;
+    background-position: -350px 200px;
+    border: 5px solid #FFFFFF;
     padding: 40px 0;
-    margin-bottom: 16px;
-    height: 501px; }
+    height: 501px;
+    transition: .3s;
+    z-index: 5; }
     .section_anketa .form_box__title {
       font-weight: 500;
       font-size: 25px;
@@ -646,7 +670,7 @@ section {
   .section_anketa .form_item {
     padding: 0 30px; }
   .section_anketa .input {
-    background: #313131;
+    background: #232323;
     border: 2px solid rgba(255, 255, 255, 0.28);
     padding: 12px 8px;
     margin-bottom: 14px;
@@ -660,13 +684,61 @@ section {
     border: none; }
   .section_anketa #result_form {
     display: none;
+    opacity: 0;
     color: #fff;
     font-size: 25px;
-    margin-top: 21%; }
+    text-align: end;
+    padding: 20px 60px; }
+    .section_anketa #result_form .section_title {
+      text-align: inherit;
+      margin-bottom: 0; }
+    .section_anketa #result_form .result_subtitle {
+      font-weight: 300; }
   @media (max-width: 575px) {
-    .section_anketa .form_box__title,
-    .section_anketa .form_item {
-      padding: 0 20px; } }
+    .section_anketa {
+      padding: 50px 0 0; }
+      .section_anketa .form_box__title,
+      .section_anketa .form_item {
+        padding: 0 20px; }
+      .section_anketa .form_box,
+      .section_anketa .input {
+        background: rgba(0, 0, 0, 0); }
+      .section_anketa .background_darken {
+        background-color: rgba(0, 0, 0, 0.7); }
+      .section_anketa .section_title {
+        margin-bottom: 0; }
+      .section_anketa .mobile_text_color {
+        color: #E52D27; }
+      .section_anketa .form_box {
+        background-image: url(../assets/form_background_after_send.jpg);
+        background-repeat: no-repeat;
+        background-position: -350px 200px;
+        padding-top: 25px;
+        border: none; }
+        .section_anketa .form_box__title {
+          text-align: center;
+          font-size: 20px;
+          line-height: 24px; }
+      .section_anketa .input {
+        border: 2px solid rgba(255, 255, 255, 0.28);
+        border-radius: 4px; } }
+
+.styles_after_send .background_darken {
+  background-color: rgba(0, 0, 0, 0.7); }
+
+.styles_after_send .form_box {
+  background: #750C0F url(../assets/form_background_after_send.jpg) no-repeat 30px 30px; }
+
+@media (max-width: 575px) {
+  .section_anketa {
+    background-position: 73% 0; }
+  .styles_after_send .form_box {
+    background-size: 76%; }
+  .styles_after_send #result_form {
+    font-size: 18px;
+    padding: 0 30px; }
+  .styles_after_send .form_box {
+    background: url(../assets/form_background_after_send.jpg) no-repeat 30px 30px; } }
 
 .section_faq {
   background: linear-gradient(90deg, #152331 0%, #000000 100%); }
@@ -694,8 +766,7 @@ section {
     margin-top: 34px; }
   .section_faq .faq_image_wrap {
     position: relative;
-    min-height: 450px;
-    margin-bottom: 16px; }
+    height: 100%; }
     .section_faq .faq_image_wrap img {
       position: relative;
       z-index: 1; }
