--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,7 @@ $brand_main_color_dark: #B31217;
 section {
     padding-top: 100px;
     padding-bottom: 100px;
+    overflow: hidden;
 }
 
 .body {
@@ -54,7 +55,7 @@ section {
     font-style: normal;
     font-weight: bold;
     font-size: 45px;
-    line-height: 64px;
+    line-height: 54px;
     text-align: center;
     color: #FFFFFF;
     margin-bottom: 30px;
@@ -65,6 +66,19 @@ section {
     line-height: 30px;
     text-align: center;
     color: #FFFFFF;
+}
+
+#toTop {
+    position: fixed;
+    right: 20px;
+    bottom: 30px;
+    padding: 12px 20px;
+    background-color: $brand_main_color_dark;
+    z-index: 500;
+    // opacity: 0;
+    i {
+        font-size: 36px;
+    }
 }
 
 @media (min-width: $screen_sm) {
@@ -157,7 +171,7 @@ section {
             .intro_title {
                 font-weight: bold;
                 font-size: 45px;
-                line-height: 64px;
+                line-height: 54px;
                 color: $brand_main_color_light;
             }
             .intro_subtitle {
@@ -184,6 +198,7 @@ section {
         }
         .menu {
             margin-top: 50px;
+            padding-left: 25px;
         }
         .logo_title {
             font-family: 'Playfair Display', serif;
@@ -253,7 +268,7 @@ section {
         }
         .toggle_button {
             position: absolute;
-            right: 20px;
+            right: 25px;
             height: 24px;
             width: 20px;
             display: flex;
@@ -266,19 +281,19 @@ section {
                 position: absolute;
                 width: 100%;
                 background-color: #fff;
-                height: 2px;
+                height: 3px;
                 transition-duration: .3s;
             }
             span::before {
                 content: '';
                 width: 60%;
-                top: -7px;
+                top: -8px;
                 right: 10%;
             }
             span::after {
                 content: '';
                 width: 60%;
-                top: 7px;
+                top: 8px;
                 left: 10%;
             }
         }
@@ -543,7 +558,7 @@ section {
     @media (max-width: $screen_xs_max) {
         padding: 0;
         .promo_text_wrap {
-            padding: 100px 15px;
+            padding: 100px 20px;
         }
         .promo_photo_wrap::before {
             width: 87px;
@@ -843,14 +858,25 @@ section {
 .section_anketa {
     background: url(../assets/anketa.jpg) no-repeat 0 0;
     background-size: cover;
-    .section_title {
-        z-index: 5;
+    padding: 200px 0;
+    position: relative;
+    .background_darken {
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0);
+        top: 0;
+        width: 100%;
+        height: 100%;
+        transition: .3s;
     }
     .form_box {
-        background: #313131;
+        background-color: #232323;
+        background-image: url(../assets/form_background_after_send.jpg);
+        background-repeat: no-repeat;
+        background-position: -350px 200px;
+        border: 5px solid #FFFFFF;
         padding: 40px 0;
-        margin-bottom: 16px;
         height: 501px;
+        transition: .3s;
         &__title {
             font-weight: 500;
             font-size: 25px;
@@ -859,6 +885,7 @@ section {
             margin-bottom: 14px;
             padding: 0 30px;
         }
+        z-index: 5;
     }
     .input_title {
         font-weight: 500;
@@ -870,12 +897,8 @@ section {
     .form_item {
         padding: 0 30px;
     }
-    // button {
-    //     border: none;
-    //     outline: none;
-    // }
     .input {
-        background: #313131;
+        background: #232323;
         border: 2px solid rgba(255, 255, 255, 0.28);
         padding: 12px 8px;
         margin-bottom: 14px;
@@ -891,15 +914,81 @@ section {
     }
     #result_form {
         display: none;
+        opacity: 0;
         color: #fff;
         font-size: 25px;
-        margin-top: 21%;
+        text-align: end;
+        padding: 20px 60px;
+        .section_title {
+            text-align: inherit;
+            margin-bottom: 0;
+        }
+        .result_subtitle {
+            font-weight: 300;
+        }
     }
     @media (max-width: $screen_xs_max) {
+        padding: 50px 0 0;
         .form_box__title,
         .form_item {
             padding: 0 20px;
         }
+        .form_box,
+        .input {
+            background: rgba(0, 0, 0, 0)
+        }
+        .background_darken {
+            background-color: rgba(0, 0, 0, 0.7);
+        }
+        .section_title {
+            margin-bottom: 0;
+        }
+        .mobile_text_color {
+            color: $brand_main_color_light;
+        }
+        .form_box {
+            background-image: url(../assets/form_background_after_send.jpg);
+            background-repeat: no-repeat;
+            background-position: -350px 200px;
+            padding-top: 25px;
+            border: none;
+            &__title {
+                text-align: center;
+                font-size: 20px;
+                line-height: 24px;
+            }
+        }
+        .input {
+            border: 2px solid rgba(255, 255, 255, 0.28);
+            border-radius: 4px;
+        }
+    }
+}
+
+.styles_after_send {
+    .background_darken {
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+    .form_box {
+        background: #750C0F url(../assets/form_background_after_send.jpg) no-repeat 30px 30px;
+    }
+}
+
+@media (max-width: $screen_xs_max) {
+    .section_anketa {
+        background-position: 73% 0;
+    }
+    .styles_after_send {
+        .form_box {
+            background-size: 76%;
+        }
+        #result_form {
+            font-size: 18px;
+            padding: 0 30px;
+        }
+    }
+    .styles_after_send .form_box {
+        background: url(../assets/form_background_after_send.jpg) no-repeat 30px 30px;
     }
 }
 
@@ -942,8 +1031,8 @@ section {
     }
     .faq_image_wrap {
         position: relative;
-        min-height: 450px;
-        margin-bottom: 16px;
+        height: 100%;
+        // margin-bottom: 16px;
         img {
             position: relative;
             z-index: 1;
